# moldable-workflows

./: README.md
checkpoint/: ckpt_all.py  ckpt_chain_optimization.py  ckpt_crossover.py  ckpt_none.py  generator.py  plat.py  strategy.py  util.py
checkpoint/DAGGEN/: 5000_0.2_0.2_0.2_0_0.1  500_0.2_0.2_0.2_0_0.1  50_0.2_0.2_0.2_0_0.1
checkpoint/WfGen/: Blast_500.json  Bwa_500.json  Cycle_500.json  Epigenomics_500.json  Genome_500.json  Montage_500.json  Seismology_500.json  Soykb_500.json  Srasearch_500.json
simu/: CMakeLists.txt  Trace.hpp  main.cpp
